kanban test (not saved)

--- a/index.html
+++ b/index.html
@@ -196,16 +196,24 @@
       </div>
       <div id='calendar2'></div>
     </div>
+
     <!--Develop Space Start-->
+    <!--
+    <div class="flex_aligincenter">
+      <h1 class="padding-medium">Kanban</h1>
+      <span class="material-symbols-outlined fontsize_Large" id="kanban_savebutton">save</span>
+    </div>
+
+    <div id="myKanban"></div>
+        -->
+    <!--Develop Space End-->
     <div id="Picture_in_Picture" class="displayhide">
         <h1>Picture in Picture</h1>
         <h3>ただ画面をPiP表示できるだけ。</h3>
-        
         <p><button id="Picture_in_Picture_start">Start Capture</button>&nbsp;<button id="Picture_in_Picture_stop">Stop Capture</button></p>
-        
         <video id="Picture_in_Picture_video" controls autoplay playsinline muted="false" volume=0></video>
     </div>
-    <!--Develop Space End-->
+
   </div>
 </body>
 
