--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <link rel="stylesheet" href="https://unpkg.com/gridjs/dist/theme/mermaid.min.css" />
 
   <script src='./src/calendar/calendar_history.js'></script>
+
   <!--jKanban-->
   <script src='./src/jkanban/jkanban.js'></script>
   <script src='./src/jkanban/jkanban_main.js'></script>
@@ -40,7 +41,14 @@
   <script src="./src/screenCapture.js"></script>
   <!--Marked js-->
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-
+  <!--Margely-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.32.0/codemirror.min.js"></script>
+  <link rel="stylesheet" media="all" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.32.0/codemirror.css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.32.0/addon/search/searchcursor.min.js"></script>
+  <script src="./src/mergely/lib/mergely.js" type="text/javascript"></script>
+  <link rel="stylesheet" media="all" href="./src/mergely/lib/mergely.css" />
+  <script src="./src/mergely/main.js" type="text/javascript"></script>
+  <link rel="stylesheet" href="./src/mergely/main.css" />
   <!--Other-->
   <link rel="stylesheet" href="./src/main.css" />
   <script src='./src/index.js'></script>
@@ -52,7 +60,8 @@
   <div class="naviArea" id="naviArea">
     <li class="navi-button hamberger">
       <div class="folderLinkArea">
-        <span class="material-symbols-outlined fontsize_Large padding-medium" id="notifications_Icon">notifications_off</span>
+        <span class="material-symbols-outlined fontsize_Large padding-medium"
+          id="notifications_Icon">notifications_off</span>
         <span class="material-symbols-outlined" id="screenLock_Icon" style="color:red">browse_activity</span>
       </div>
       <div class="hambergerPosition" id="hamberger">
@@ -85,12 +94,12 @@
         <span class="material-symbols-outlined fontsize_Large">manage_history</span>
       </div>
     </li>
-    <li class="navi-button" id="bnavi-task">
+    <!--li class="navi-button" id="bnavi-task">
       <div>kanban</div>
       <div class="hambergerPosition">
         <span class="material-symbols-outlined fontsize_Large">task</span>
       </div>
-    </li>
+    </li-->
     <li class="navi-button" id="bnavi-folder">
       <div>Folder</div>
       <div class="hambergerPosition">
@@ -101,6 +110,12 @@
       <div>PiP</div>
       <div class="hambergerPosition">
         <span class="material-symbols-outlined fontsize_Large">picture_in_picture_alt</span>
+      </div>
+    </li>
+    <li class="navi-button" id="bnavi-diff">
+      <div>Diff</div>
+      <div class="hambergerPosition">
+        <span class="material-symbols-outlined fontsize_Large">difference</span>
       </div>
     </li>
   </div>
@@ -176,6 +191,12 @@
                   <label for="task_add_textColor">文字</label>
                   <input type="color" id="task_add_textColor">
                 </div>
+                <div class="task_add_colorsync_a">
+                  <div class="task_add_colorsync_r displayhide" id="task_add_colorsync">
+                    <span id="task_add_colorsync_chain"></span>
+                    <span class="material-symbols-outlined" id="task_add_colorsync_icon">lock</span>
+                  </div>
+                </div>
               </fieldset>
             </div>
           </div>
@@ -184,7 +205,7 @@
         <div class="taskAddControlArea">
           <div id="task_add_addButton"><span class="material-symbols-outlined fontsize_Large">library_add_check</span>追加
           </div>
-          <div id="task_add_editButton"><span class="material-symbols-outlined fontsize_Large">edit</span>編集</div>
+          <div id="task_add_editButton"><span class="material-symbols-outlined fontsize_Large">save</span>保存</div>
           <div id="task_add_deleteButton"><span class="material-symbols-outlined fontsize_Large">delete</span></div>
         </div>
         <div class="taskAdd_editTargetDisp">
@@ -206,14 +227,37 @@
 
     <div id="myKanban"></div>
         -->
+
     <!--Develop Space End-->
     <div id="Picture_in_Picture" class="displayhide">
-        <h1>Picture in Picture</h1>
-        <h3>ただ画面をPiP表示できるだけ。</h3>
-        <p><button id="Picture_in_Picture_start">Start Capture</button>&nbsp;<button id="Picture_in_Picture_stop">Stop Capture</button></p>
-        <video id="Picture_in_Picture_video" controls autoplay playsinline muted="false" volume=0></video>
+      <h1>Picture in Picture</h1>
+      <h3>ただ画面をPiP表示できるだけ。</h3>
+      <p><button id="Picture_in_Picture_start">Start Capture</button>&nbsp;<button id="Picture_in_Picture_stop">Stop
+          Capture</button></p>
+      <video id="Picture_in_Picture_video" controls autoplay playsinline muted="false" volume=0></video>
     </div>
-
+    <div id="mergely-root">
+      <div class="mergely-toolbar">
+        <div class="mergely-toolbar-left">
+          <span class="material-symbols-outlined mergely-toolbar-button-color"
+            id="mergely-toolbar-left-folderlink">folder_open</span>
+          <select id="mergely-toolbar-left-pulldown"><option>Not Linked</option></select>
+          <span class="material-symbols-outlined mergely-toolbar-button-color" id="mergely-toolbar-left-save">save_as</span>
+        </div>
+        <div class="mergely-toolbar-centerline"></div>
+        <div class="mergely-toolbar-right">
+          <span class="material-symbols-outlined mergely-toolbar-button-color"
+            id="mergely-toolbar-right-folderlink">folder_open</span>
+          <select id="mergely-toolbar-right-pulldown"><option>Not Linked</option></select>
+          <span class="material-symbols-outlined mergely-toolbar-button-color" id="mergely-toolbar-right-save">save_as</span>
+        </div>
+      </div>
+      <div class="mergely-full-screen-8">
+        <div class="mergely-resizer">
+          <div id="mergely"></div>
+        </div>
+      </div>
+    </div>
   </div>
 </body>
 
