--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
   <script src='./src/jkanban/jkanban.js'></script>
   <script src='./src/jkanban/jkanban_main.js'></script>
   <link rel="stylesheet" href="./src/jkanban/jkanban.css" />
-  <!--SpecBuilder-->
-  <script src='./src/specbuilder/main.js'></script>
-  <link rel="stylesheet" href="./src/specbuilder/main.css" />
+  <!--projectBuilder-->
+  <script src='./src/projectbuilder/main.js'></script>
+  <link rel="stylesheet" href="./src/projectbuilder/main.css" />
   <script src="./src/screenCapture.js"></script>
   <!--Marked js-->
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
