--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
   <!--Image Editor-->
   <link rel="stylesheet" href="https://uicdn.toast.com/tui-image-editor/latest/tui-image-editor.css" />
   <script src="https://uicdn.toast.com/tui-image-editor/latest/tui-image-editor.js"></script>
+  <!--VTT Caption-->
+  <script src="./src/vttCaption/vttCaption.js"></script>
   <!--Other-->
   <link rel="stylesheet" href="./src/main.css" />
   <script src='./src/index.js'></script>
@@ -146,6 +148,12 @@
       <div>Image Edit</div>
       <div class="hambergerPosition">
         <span class="material-symbols-outlined fontsize_Large">wallpaper</span>
+      </div>
+    </li>
+    <li class="navi-button" id="bnavi-vttCaption">
+      <div>VTT Caption</div>
+      <div class="hambergerPosition">
+        <span class="material-symbols-outlined fontsize_Large">closed_caption</span>
       </div>
     </li>
   </div>
