--- a/src/monaco/index.html
+++ b/src/monaco/index.html
@@ -7,7 +7,7 @@
     <script src="./lib/min/vs/loader.js"></script>
     <script src="./monaco.js"></script>
     <script src="./monaco_fileSelect.js"></script>
-    <script src="/src/fileSystem2.js"></script>
+    <script src="../fileSystem2.js"></script>
     <link rel="stylesheet" href="./monaco.css" />
 </head>
 <body>
