--- a/monaco/index.html
+++ b/monaco/index.html
@@ -34,6 +34,7 @@
         <div class="alignLine"></div>
         <div style="display:flex; width: 100%;position:relative;overflow: hidden;">
             <div class="control-FolderFileArea">
+                <select name="control-Folder-Left" id="control-Library-Left" class="control-FileFolder-pulldown"></select>
                 <select name="control-Folder-Left" id="control-Folder-Left"
                     class="control-FileFolder-pulldown"></select>
                 <select name="control-File-Left" id="control-File-Left" class="control-FileFolder-pulldown"></select>
@@ -43,17 +44,31 @@
                         src="./icon/link.svg"></span>
             </div>
             <div class="control-FolderFileArea">
+                <select name="control-Folder-Left" id="control-Library-Right" class="control-FileFolder-pulldown"></select>
                 <select name="control-Folder-Right" id="control-Folder-Right"
                     class="control-FileFolder-pulldown"></select>
                 <select name="control-File-Right" id="control-File-Right" class="control-FileFolder-pulldown"></select>
             </div>
             <div id="control-subArea" class="close">
-                <span id="control-FolderSelect" class="control-iconButton hoverButton"><img class="refSize"
-                        src="./icon/cursor-text.svg"></span>
+                <div class="alignLine"></div>
+                <div>
+                    <input type="checkbox" class="displayHide" id="control-extraInsertText"></input>
+                    <label for="control-extraInsertText" class="control-iconButton"><img class="refSize"
+                            src="./icon/cursor-text.svg"></label>
+                </div>
+                <div>
+                    <input type="checkbox" class="displayHide" id="control-extraRuler"></input>
+                    <label for="control-extraRuler" class="control-iconButton"><img class="refSize"
+                            src="./icon/ruler-2.svg"></label>
+                </div>
+                <div class="alignLine"></div>
+                <div>
+                    <input type="checkbox" class="displayHide" id="control-extraFolderSeparate"></input>
+                    <label for="control-extraFolderSeparate" class="control-iconButton"><img class="refSize"
+                            src="./icon/folder-code.svg"></label>
+                </div>
                 <span id="control-extraTheme" class="control-iconButton hoverButton"><img class="refSize"
                         src="./icon/palette.svg"></span>
-                <span id="control-extraRuler" class="control-iconButton hoverButton"><img class="refSize"
-                        src="./icon/ruler-2.svg"></span>
                 <span id="control-extraTerminal" class="control-iconButton hoverButton"><img class="refSize"
                         src="./icon/terminal-2.svg"></span>
             </div>
