overwrite mode add

--- a/monaco/index.html
+++ b/monaco/index.html
@@ -54,7 +54,7 @@
             <div id="control-subArea" class="">
                 <div class="alignLine"></div>
                 <div>
-                    <input type="checkbox" class="displayHide" id="control-extraInsertText"></input>
+                    <input type="checkbox" class="displayHide" id="control-extraInsertText" checked></input>
                     <label for="control-extraInsertText" class="control-iconButton"><img class="refSize"
                             src="./icon/cursor-text.svg"></label>
                 </div>
