Add Monaco_Editor Button to DAM_Sidebar

--- a/index.html
+++ b/index.html
@@ -113,6 +113,12 @@
         <span class="material-symbols-outlined fontsize_Large">calendar_month</span>
       </div>
     </li>
+    <li class="navi-button" id="bnavi-monaco">
+      <div>Monaco</div>
+      <div class="hambergerPosition">
+        <span class="material-symbols-outlined fontsize_Large">edit_note</span>
+      </div>
+    </li>
     <li class="navi-button" id="bnavi-PiP">
       <div>PiP</div>
       <div class="hambergerPosition">
